--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.3.3",
     "@planetscale/database": "^1.11.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "drizzle-orm": "^0.28.5",
+    "drizzle-orm": "^0.28.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
+    "next-auth": "^4.23.2",
     "next-runtime-dotenv": "^1.5.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -26,6 +28,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.19.13"
+    "drizzle-kit": "^0.19.13",
+    "mysql2": "^3.6.1"
   }
 }
