--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.3",
     "@planetscale/database": "^1.11.0",
+    "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "argon2": "^0.31.1",
     "autoprefixer": "10.4.14",
     "drizzle-orm": "^0.28.6",
     "eslint": "8.43.0",
