--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.2",
     "drizzle-orm": "^0.28.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "mysql2": "^3.6.3",
     "next": "13.4.6",
     "next-runtime-dotenv": "^1.5.1",
     "postcss": "8.4.24",
