--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@planetscale/database": "^1.11.0",
+    "@auth/drizzle-adapter": "^0.3.12",
+    "@planetscale/database": "^1.13.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.2",
-    "drizzle-orm": "^0.28.5",
+    "drizzle-orm": "^0.28.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "mysql2": "^3.6.3",
-    "next": "13.4.6",
+    "mysql2": "^3.6.5",
+    "next": "^14.0.4",
+    "next-auth": "^5.0.0-beta.4",
     "next-runtime-dotenv": "^1.5.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
