--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.12",
+    "@hookform/resolvers": "^3.3.4",
     "@planetscale/database": "^1.13.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.2",
-    "drizzle-orm": "^0.28.6",
+    "bcryptjs": "^2.4.3",
+    "drizzle-orm": "^0.29.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "mysql2": "^3.6.5",
@@ -26,10 +28,16 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "resend": "^2.1.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.19.13"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^9.0.7",
+    "drizzle-kit": "^0.20.9"
   }
 }
