--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "mysql2": "^3.6.3",
     "next": "^14.0.4",
     "next-runtime-dotenv": "^1.5.1",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
